// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should have a bottom separator when sticky 1`] = `
.circuit-0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
  box-shadow: inset 0px -1px 0px var(--cui-border-divider);
}

@media (min-width: 768px) {
  .circuit-0 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

@media (min-width: 768px) {
  .circuit-0 {
    box-shadow: inset 1px -1px 0px var(--cui-border-divider);
  }
}

.circuit-1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <h2
        class="_base_20bab7 _four_20bab7 circuit-1"
        id="side-panel-header"
      >
        Side panel title
      </h2>
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-2"
        title="Close"
        type="button"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
              fill="currentColor"
            />
          </svg>
          <span
            class="_hide-visually_73b4bb"
          >
            Close
          </span>
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Header > should match the snapshot 1`] = `
.circuit-0 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  z-index: 600;
}

@media (min-width: 768px) {
  .circuit-0 {
    box-shadow: inset 1px 0px 0px var(--cui-border-divider);
  }
}

.circuit-1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: center;
  margin-left: 56px;
}

.circuit-2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin: 4px;
  border-color: transparent!important;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <h2
        class="_base_20bab7 _four_20bab7 circuit-1"
        id="side-panel-header"
      >
        Side panel title
      </h2>
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-2"
        title="Close"
        type="button"
      >
        <span
          class="_base_2b3edd _byte_2b3edd _spinner_892426"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.71 19.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L12 13.42l-7.29 7.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71L10.58 12 3.29 4.71A1.014 1.014 0 0 1 3 4a1 1 0 0 1 1-1c.266 0 .52.104.71.29L12 10.58l7.29-7.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.42 12l7.29 7.29z"
              fill="currentColor"
            />
          </svg>
          <span
            class="_hide-visually_73b4bb"
          >
            Close
          </span>
        </span>
      </button>
    </div>
  </div>
</body>
`;
